--- a/feeback.html
+++ b/feeback.html
@@ -7,7 +7,7 @@
     <title>Feedback</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/94175543d4.js" crossorigin="anonymous"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </head>
 
 <body>
