--- a/fullnews.html
+++ b/fullnews.html
@@ -7,7 +7,7 @@
     <title>NEWS</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/94175543d4.js" crossorigin="anonymous"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                         <button class="openbtn" onclick="openNav()">&#9776;</button>
                     </div>
                     <div class="logo">
-                        <img src="/img/SABIC-LOGO_tcm1010-14323.svg" alt="" srcset="">
+                        <img src="img/SABIC-LOGO_tcm1010-14323.svg" alt="" srcset="">
                     </div>
 
 
