--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                         <button class="openbtn" onclick="openNav()">&#9776;</button>
                     </div>
                     <div class="logo">
-                        <img src="img/SABIC-desktop-hero-SABIC-HQ_tcm1010-30958.jpg" alt="" srcset="">
+                        <img src="img/SABIC-LOGO_tcm1010-14323.svg" alt="" srcset="">
                     </div>
                     
 
