--- a/feeback.html
+++ b/feeback.html
@@ -81,8 +81,8 @@
             <div class="feeback-from">
                 <div class="feeback-from-div">
                     <h3>HELP US TO IMPROVE</h3>
-                    <p>Do you have a Suggestion or found some bugs?
-                        let us know in the field bellow.
+                    <p>Do you have a Suggestion to improve our services?
+                        let us know in the field below.
                     </p>
                 </div>
 
