--- a/feeback.html
+++ b/feeback.html
@@ -110,8 +110,8 @@
                    
                     <textarea name="" id="" cols="30" rows="7" placeholder="Describe your experience here ..."></textarea>
 
-                    <input type="radio" id="radioButton4" name="category">
-                        <label for="radioButton4" class="text"> Bugs </label>
+                        <input type="radio" id="radioButton4" name="category">
+                        <label for="radioButton4" class="text"> Complaints </label>
 
                         <input type="radio" id="radioButton5" name="category">
                         <label for="radioButton5" class="text"> Suggestion </label>
