--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
         </nav>
         <main>
             <!-- sidepanel -->
-            <div id="mySidepanel" class="sidepanel">
+            <!-- <div id="mySidepanel" class="sidepanel">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="#"><i class="fa-solid fa-computer"></i>Computing Services</a>
                 <a href="#"><i class="fa-solid fa-business-time"></i>Busines Application</a>
@@ -73,7 +73,7 @@
                 <a href="#"><i class="fa-solid fa-house"></i>Work From Home</a>
                 <hr>
                 <a href="feeback.html">Send Feeback</a>
-            </div>
+            </div> -->
             <!-- sidepanel -->
             <div class="ctm" >
                 <img src="img/SABIC-CTM_tcm1010-14324.svg" alt="">
