--- a/news.html
+++ b/news.html
@@ -76,8 +76,8 @@
             <hr>
             <a href="feeback.html">Send Feeback</a>
         </div>
-        <!-- sidepanel -->
-            <div class="filter">
+        <!-- sidepanel 
+           <!-- <div class="filter">
 
                     <form action="">
                         <fieldset class="filter-contanier">
@@ -170,7 +170,7 @@
                                 
                            
                         </fieldset>
-                    </form>
+                    </form> -->
 
             </div>
             <div class="news-section">
