--- a/news.html
+++ b/news.html
@@ -172,7 +172,7 @@
                         </fieldset>
                     </form> -->
 
-            </div>
+            </div> -->
             <div class="news-section">
                 <div class=>
                     <h1>Latest News</h1>
