--- a/news.html
+++ b/news.html
@@ -77,7 +77,7 @@
             <a href="feeback.html">Send Feeback</a>
         </div>
         <!-- sidepanel 
-           <!-- <div class="filter">
+             <div class="filter">
 
                     <form action="">
                         <fieldset class="filter-contanier">
@@ -170,9 +170,9 @@
                                 
                            
                         </fieldset>
-                    </form> -->
+                    </form>
 
-            </div> -->
+            </div>
             <div class="news-section">
                 <div class=>
                     <h1>Latest News</h1>
