--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
             <hr>
             <a href="feeback.html">Send Feeback</a>
         </div>
-        <!-- sidepanel 
+        <!-- sidepanel -->
              <div class="filter">
 
                     <form action="">
