--- a/feeback.html
+++ b/feeback.html
@@ -75,14 +75,14 @@
                 <a href="#"><i class="fa-solid fa-list"></i>ERP Services</a>
                 <a href="#"><i class="fa-solid fa-house"></i>Work From Home</a>
                 <hr>
-                <a href="feeback.html">Send Feeback</a>
+                <a href="feedback.html">Send Feedback</a>
             </div>
             <!-- sidepanel -->
-            <div class="feeback-from">
-                <div class="feeback-from-div">
+            <div class="feedback-from">
+                <div class="feedback-from-div">
                     <h3>HELP US TO IMPROVE</h3>
                     <p>Do you have a Suggestion to improve our services?
-                        let us know in the field below.
+                        Let us know in the field below.
                     </p>
                 </div>
 
