--- a/notification.html
+++ b/notification.html
@@ -75,7 +75,7 @@
                 <a href="#"><i class="fa-solid fa-list"></i>ERP Services</a>
                 <a href="#"><i class="fa-solid fa-house"></i>Work From Home</a>
                 <hr>
-                <a href="feedback.html">Send Feeback</a>
+                <a href="feedback.html">Send Feedback</a>
             </div>
             <!-- sidepanel -->
             <div class="notification_container">
