--- a/feedback.html
+++ b/feedback.html
@@ -75,14 +75,14 @@
                 <a href="#"><i class="fa-solid fa-list"></i>ERP Services</a>
                 <a href="#"><i class="fa-solid fa-house"></i>Work From Home</a>
                 <hr>
-                <a href="feedback.html">Send Feedback</a>
+                <a href="feedback.html">User Feedback</a>
             </div>
             <!-- sidepanel -->
             <div class="feedback-from">
                 <div class="feedback-from-div">
                     <h3>HELP US TO IMPROVE</h3>
-                    <p>Do you have a Suggestion to improve our services?
-                        Let us know in the field below.
+                    <p>Do you have Suggestions to improve our services?
+                        Please let us know in the field below.
                     </p>
                 </div>
 
