--- a/home.html
+++ b/home.html
@@ -154,7 +154,7 @@
 
             <div class="news-section">
                 <div class=>
-                    <h1>SABIC Videos</h1>
+                    <p>We believe the answer to some of the world’s biggest challenges lies in the natural human instinct to collaborate. Together, we’re creating Chemistry that Matters™.</p>
                 </div>
                 <iframe width="780" height="315" src="https://www.youtube.com/embed/Ozvh5RobHeo?si=oR2FvJtLm-RrD6rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 
