--- a/home.html
+++ b/home.html
@@ -154,8 +154,8 @@
 
             <div class="news-section">
                 <div class=>
-                    <p>We believe the answer to some of the world’s biggest challenges lies in the natural human instinct to collaborate.</p><br/>
-                    <p>Together, we’re creating Chemistry that Matters™.</p>
+                    <h2>SABIC Video</h2>h2>
+                   
                 </div>
                 <iframe width="780" height="315" src="https://www.youtube.com/embed/Ozvh5RobHeo?si=oR2FvJtLm-RrD6rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 
