--- a/home.html
+++ b/home.html
@@ -154,15 +154,13 @@
 
             <div class="news-section">
                 <div class=>
-                    <h2>SABIC Video</h2>h2>
-                   
+                    <h3>SABIC Video</h3>
+                    <p>We believe the answer to some of the world’s biggest challenges</p>
+                    <p>lies in the natural human instinct to collaborate.</p>
+                    <p>Together, we’re creating Chemistry that Matters™.</p       
                 </div>
-                <iframe width="780" height="315" src="https://www.youtube.com/embed/Ozvh5RobHeo?si=oR2FvJtLm-RrD6rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                
+                <iframe width="780" height="315" src="https://www.youtube.com/embed/Ozvh5RobHeo?si=oR2FvJtLm-RrD6rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>     
             </div>
-
-
-
         </main>
         <footer>
             <p>
